# geoloc-api

./: .dockerignore  .env.example  Dockerfile  README.md  SECURITY.md  docker-compose.yml  fetch.sh  geo.sh  init.sql  load.py  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
app/: config.py  db.py  domain.py  loaders.py  main.py  middleware.py  repository.py  schemas.py  security.py
tests/: test_api.py  test_domain.py  test_loaders.py
