[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "geoloc-api"
version = "0.1.0"
description = "Self-hosted geolocation database for cellular towers, WiFi APs and A-GNSS data"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Marc Rivero López", email = "mriverolopez@gmail.com" }]
dependencies = [
    "fastapi==0.138.*",
    "uvicorn[standard]==0.49.*",
    "PyMySQL==1.2.*",
    "pydantic==2.13.*",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.*",
    "httpx==0.28.*",
    "ruff==0.15.*",
    "mypy==2.1.*",
    "bandit==1.9.*",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, import-sorting

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
disable_error_code = ["import-untyped"]   # PyMySQL no trae stubs
